<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:fillViewport="true">

        <ImageView
            android:id="@+id/imagehambuguer"
            android:layout_gravity="top"
            android:layout_width="wrap_content"
            android:layout_height="320dp"
            app:srcCompat="@drawable/teste1" />

        <TextView
            android:id="@+id/text_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahiana1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/text_header"
            android:textColor="@color/white"
            android:textSize="72sp" />

        <TextView
            android:id="@+id/text_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abril1"
            android:layout_below="@id/imagehambuguer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-24dp"
            android:text="@string/text_subheader"
            android:textColor="@color/warm_red"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/text_plates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahiana1"
            android:layout_below="@id/text_subheader"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp"
            android:text="@string/text_plates"
            android:textColor="@color/warm_red"
            android:textSize="48sp" />
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@id/text_plates"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white" />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahiana1"
            android:layout_below="@id/text_plates"
            android:layout_marginTop="25dp"
            android:text="@string/text_foods"
            android:textColor="@color/cadmium"
            android:textSize="32sp" />
        <TextView
            android:id="@+id/text_waitMata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahiana1"
            android:layout_below="@id/checkbox"
            android:layout_marginStart="32dp"
            android:layout_marginTop="-8dp"
            android:text="@string/text_waitMataFome"
            android:textColor="@color/white"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/text_matafome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahiana1"
            android:layout_below="@id/text_plates"
            android:layout_marginStart="320dp"
            android:layout_marginTop="25dp"
            android:text="@string/text_matafome"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahiana1"
            android:layout_below="@id/checkbox"
            android:layout_marginTop="16dp"
            android:text="@string/text_foods1"
            android:textColor="@color/cadmium"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/text_waitSup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahiana1"
            android:layout_below="@id/checkbox1"
            android:layout_marginStart="32dp"
            android:layout_marginTop="-8dp"
            android:text="@string/text_waitSupremo"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_supremo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahiana1"
            android:layout_below="@id/checkbox"
            android:layout_marginStart="320dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_supremo"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahiana1"
            android:layout_below="@id/checkbox1"
            android:layout_marginTop="16dp"
            android:text="@string/text_foods2"
            android:textColor="@color/cadmium"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/text_waitBatata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahiana1"
            android:layout_below="@id/checkbox2"
            android:layout_marginStart="32dp"
            android:layout_marginTop="-8dp"
            android:text="@string/text_waitBatataFrita"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_batata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahiana1"
            android:layout_below="@id/checkbox1"
            android:layout_marginStart="320dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_batata"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <CheckBox
            android:id="@+id/checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahiana1"
            android:layout_below="@id/checkbox2"
            android:layout_marginTop="16dp"
            android:text="@string/text_foods3"
            android:textColor="@color/cadmium"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/text_waitCachorro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahiana1"
            android:layout_below="@id/checkbox3"
            android:layout_marginStart="32dp"
            android:layout_marginTop="-8dp"
            android:text="@string/text_waitCachorroQuente"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/text_cachorroquente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahiana1"
            android:layout_below="@id/checkbox2"
            android:layout_marginStart="320dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_cachorroquente"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/text_drinks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahiana1"
            android:layout_below="@id/checkbox3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:text="@string/text_drinks"
            android:textColor="@color/warm_red"
            android:textSize="48sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@id/text_drinks"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white" />

        <CheckBox
            android:id="@+id/checkbox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahiana1"
            android:layout_below="@id/text_drinks"
            android:layout_marginTop="25dp"
            android:text="@string/text_drinks1"
            android:textColor="@color/cadmium"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/text_Sodaflavors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abril1"
            android:layout_below="@id/checkbox4"
            android:layout_marginTop="-12dp"
            android:layout_marginStart="40dp"
            android:text="@string/text_Sodaflavors"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_priceSoda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahiana1"
            android:layout_below="@id/text_drinks"
            android:layout_marginStart="320dp"
            android:layout_marginTop="35dp"
            android:text="@string/text_priceSoda"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <CheckBox
            android:id="@+id/checkbox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahiana1"
            android:layout_below="@id/checkbox4"
            android:layout_marginTop="16dp"
            android:text="@string/text_drinks2"
            android:textColor="@color/cadmium"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/text_Juiceflavors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abril1"
            android:layout_below="@id/checkbox5"
            android:layout_marginTop="-12dp"
            android:layout_marginStart="40dp"
            android:text="@string/text_Juiceflavors"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_priceJuice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahiana1"
            android:layout_below="@id/text_priceSoda"
            android:layout_marginStart="320dp"
            android:layout_marginTop="30dp"
            android:text="@string/text_priceJuice"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <CheckBox
            android:id="@+id/checkbox6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahiana1"
            android:layout_below="@id/checkbox5"
            android:layout_marginTop="16dp"
            android:text="@string/text_drinks3"
            android:textColor="@color/cadmium"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/text_waterflavors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abril1"
            android:layout_below="@id/checkbox6"
            android:layout_marginTop="-12dp"
            android:layout_marginStart="40dp"
            android:text="@string/text_waterflavors"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_priceWater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahiana1"
            android:layout_below="@id/text_priceJuice"
            android:layout_marginStart="320dp"
            android:layout_marginTop="30dp"
            android:text="@string/text_priceWater"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/text_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahiana1"
            android:layout_below="@id/text_priceWater"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="96dp"
            android:text="@string/text_results"
            android:textColor="@color/white"
            android:textSize="56sp" />

        <Button
            android:id="@+id/button_ready"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_result"
            android:layout_marginStart="128dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/cadmium"
            android:fontFamily="@font/bahiana1"
            android:text="@string/button_ready"
            android:layout_centerHorizontal="true"
            android:textAllCaps="true"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/edit_sugestions"
            android:layout_width="350dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/button_ready"
            android:layout_marginTop="36dp"
            android:hint="@string/edit_sugestions"
            android:textColorHint= "@color/white"
            android:fontFamily="@font/abril1"
            android:inputType="textMultiLine"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>
</ScrollView>